--- a/content/1_einleitung/einleitung.tex
+++ b/content/1_einleitung/einleitung.tex
@@ -39,7 +39,7 @@ In einer Arbeit verfasst von der Technischen Universität in Schweden resultiert 
 %
 In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde das Tracken eines Bewegungsablauf mittels Beschleunigungssensor, Gyroskop und \gls{g:magnetometer} realisiert. Dabei wird zuerst die Ausrichtung des Sensors zum Bezugssystem bestimmt und mittels Rotationsmatrix in das gewünschte Bezugssystem transformiert. Dann wird die gemessenen Beschleunigungen von der Beschleunigung des Erdfeldes separiert und anschliessend durch doppelte Integration auf den zurückgelegten Weg geschlossen. Da durch den Drift des Gyroskopes die Messung nach wenigen Sekunden schon stark verfälscht ist, wurde eine zusätzliche Bewegungsdetektion vorgenommen. Die Integration der Beschleunigung erfolgt somit  nur, wenn sich das Testobjekt bewegt. Die Bewegung wird mittels einem Threshold aus der berechneten Varianz des Beschleunigungssensors (abzüglich der Erdbeschleunigung) detektiert. Zusätzlich wird dem Drift des Gyroskopes mit einer Kompensation entgegengewirkt. Mit dieser Methode erreichten sie eine Genauigkeit von 2 cm auf eine Distanz von 50 cm \cite{lit:doubleint}.
 %
-\section{Aufgabenstellung}\label{s:aufgabenstellung}
+\section{Aufgabenstellung}\label{s:aufgabenstellung} \todo{Check Referenz}
 	Die Aufgabenstellung wurde wie folgt durch die Betreuer und die Autoren definiert. Die Arbeit dauert 5 Wochen, wobei die Projektstudie eingerechnet ist. Für den genauen Wortlaut sei auf den Anhang \vref{ch:aufgabenstellung} verwiesen.\par
 	%
 	Während der Karriere eines Sportlers treten oft Verletzungen auf, die eine längere Trainingsabsolvents zur Folge haben können. In dieser Phase ist es wichtig den richtigen Zeitpunkt für den Wiedereinstieg zu finden, da sonst entweder wertvolle Zeit des Aufbaus verloren geht, oder die Verletzung wieder aufbrechen kann. Bisweilen wurde diese Beurteilung durch die subjektive Wahrnehmung eines Physiotherapeuten durchgeführt und hatte keine messtechnische Grundlagen. Im Zuge eines Forschungsprojekts soll nun eine Methodik entwickelt werden damit ein Therapeut eine Basis für eine begründete Diagnose hat.\par
@@ -102,7 +102,6 @@ In der letzten betrachteten Arbeit der Universität Coimbra in Portugal, wurde da
 	\begin{itemize}
 		\item \gls{g:matlab} 2012b
 		\item \gls{g:labview} 2013
-		\item NI-DAQ mx 9.5.5 
 	\end{itemize}
 	%
 	Weiter wurde diverse Werkzeuge zur Erzeugung der Dokumentation eingesetzt, die jedoch keinen wesentlichen Einfluss auf das Projekt haben.
