--- a/report.tex
+++ b/report.tex
@@ -322,9 +322,15 @@
 \input{appendix/versionierung/versionierung}
 %
 %Anhang B
-\input{appendix/DAQ_MATLAB/DAQ_MATLAB}
+\input{appendix/aufgabenstellung/aufgabenstellung}
 %
 %Anhang C
+\input{appendix/cd/cd}
+%
+%Anhang D
+\input{appendix/DAQ_MATLAB/DAQ_MATLAB}
+%
+%Anhang D
 %\input{appendix/datasheet/datasheet}
 %
 %
