--- a/appendix/cd/cd.tex
+++ b/appendix/cd/cd.tex
@@ -15,7 +15,7 @@
 \chapter{CD}\label{ch:cd}
 	Aus ökologischen und ökonomischen Gründen wird ein grosser Teil des Anhangs in Form einer CD-ROM dieser Dokumentation beigelegt. Die Dateistruktur entspricht dabei der Gliederung dieses Kapitels.
     %
-    \section{LabVIEW}
+    \section{LabVIEW}\label{s:anhang_labview}
     	Alle benötigten \gls{g:labview}-Projekte:
     	%
     	\begin{itemize}
@@ -23,5 +23,5 @@
 	    	\item \textbf{Implementierung}: \texttt{reametric}
     	\end{itemize}
     %
-    \section{MATLAB}
+    \section{MATLAB}\label{s:anhang_matlab}
   
