--- a/content/5_validierung/validierung.tex
+++ b/content/5_validierung/validierung.tex
@@ -12,4 +12,7 @@
 %
 % 0.0.0       Erstellung der Datei
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\chapter{Validierung}\label{ch:validierung}
+\chapter{Validierung}\label{ch:validierung}\todo{Ergebnis des Projektes}
+\section{Ergebnisse}
+\section{Soll/Ist-Vergleich}\todo{Bezug auf den Zeitplan, Abweichungen erklären}
+\section{Erkenntnisse, Verbesserungen}\todo{eingehen auf Literatur (Gyro, Magnetometer)}
